Use more efficient Short cache: Use "Short.valueOf(int)" instead of "new Short(short)"
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/lang/trunk@1153488 13f79535-47bb-0310-9956-ffa450edef68